# research

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-28-p5-tennis-world-model.md
docs/superpowers/specs/: 2026-06-28-p5-tennis-world-model-design.md
p1_imagine_then_act/: README.md  run_planner.py
p2_video_world_model/: README.md  run_video_wm.py
p3_failure_analysis/: README.md  run_failure_analysis.py
p4_language_robustness/: README.md  run_language_robustness.py
p5_tennis_world_model/: README.md  p5_walkthrough.ipynb  run_tennis_wm.py
p5_tennis_world_model/data/: labels.csv.example
results/: p1_metrics.json  p3_metrics.json  p4_metrics.json
scripts/: run_all.sh  train_policy.py  train_world_model.py
src/vlawm/: __init__.py  data.py  nn.py
src/vlawm/envs/: __init__.py  reach.py
src/vlawm/eval/: __init__.py  harness.py
src/vlawm/tennis/: data.py  encoder.py  evaluate.py  prep.py  retrieval.py
src/vlawm/vla/: __init__.py  policy.py  text.py
src/vlawm/worldmodel/: __init__.py  latent_wm.py  mpc.py  tennis_wm.py  video_wm.py
tests/: test_tennis_data.py  test_tennis_model.py  test_tennis_prep.py  test_tennis_retrieval.py
