[project]
name = "vla-wm"
version = "0.1.0"
description = "VLA + World Model research portfolio (Harvard/TUM master thesis prep)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy>=1.26",
    "gymnasium>=0.29",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "tqdm>=4.66",
    "einops>=0.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy / optional. Install on demand: uv sync --extra robot
robot = [
    "gym-pusht>=0.1.5",
    "lerobot>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
